--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.thymeleaf.enabled=true
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=pateldhruvit2003@gmail.com
-spring.mail.password=wfru oicy wedd vcqg
+spring.mail.username= //add google username here
+spring.mail.password= //add google SMTP Credentials
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
